Internationalize and localize footer.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,8 @@
 {
-    "GP-full-name": "Greater Phoenix Chinese Christian Church",
-    "GPCCC": "GPCCC"
+    "Greater Phoenix Chinese Christian Church": "Greater Phoenix Chinese Christian Church",
+    "GPCCC": "GPCCC",
+    "Our belief and purpose": "Our belief and purpose",
+    "Employment opportunities": "Employment opportunities",
+    "Copyright": "Copyright",
+    "DictionaryLanguage": "English"
 }
