--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -1,4 +1,8 @@
 {
-    "GP-full-name": "凰城華人基督教會",
-    "GPCCC": "凰城華人基督教會"
+    "Greater Phoenix Chinese Christian Church": "凰城華人基督教會",
+    "GPCCC": "凰城華人基督教會",
+    "Our belief and purpose": "我們的信念和宗旨",
+    "Employment opportunities": "就業機會",
+    "Copyright": "版權",
+    "DictionaryLanguage": "Cantonese (traditional Chinese)"
 }
