--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -1,4 +1,8 @@
 {
-    "GP-full-name": "凰城华人基督教会",
-    "GPCCC": "凰城华人基督教会"
+    "Greater Phoenix Chinese Christian Church": "凰城华人基督教会",
+    "GPCCC": "凰城华人基督教会",
+    "Our belief and purpose": "我们的信念和宗旨",
+    "Employment opportunities": "就业机会",
+    "Copyright": "版权",
+    "DictionaryLanguage": "Mandarin (simplified Chinese)"
 }
