--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -1,6 +1,7 @@
 {
     "Greater Phoenix Chinese Christian Church": "凰城华人基督教会",
     "GPCCC": "凰城华人基督教会",
+    "Church news for": "教会每周新闻",
     "Our belief and purpose": "我们的信念和宗旨",
     "Employment opportunities": "就业机会",
     "DictionaryLanguage": "Mandarin (simplified Chinese)"
