--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -4,5 +4,8 @@
     "Church news for": "教會每週新聞",
     "Our belief and purpose": "我們的信念和宗旨",
     "Employment opportunities": "就業機會",
+    "Error 404: Page not found": "錯誤 404：找不到頁面",
+    "The_requested_link_url_is_broken": "請求的連結 {{url}} 已損壞。",
+    "Go back": "回去",
     "DictionaryLanguage": "Cantonese (traditional Chinese)"
 }
