--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,7 +4,7 @@
     "Church news for": "Church news for",
     "Our belief and purpose": "Our belief and purpose",
     "Employment opportunities": "Employment opportunities",
-    "Error 404: Page not found": "Error 404: Page not found",
+    "Page not found": "Page not found",
     "The_requested_link_url_is_broken": "The requested link {{url}} is broken.",
     "Go back": "Go back",
     "DictionaryLanguage": "English"
