--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -4,7 +4,7 @@
     "Church news for": "教会每周新闻",
     "Our belief and purpose": "我们的信念和宗旨",
     "Employment opportunities": "就业机会",
-    "Error 404: Page not found": "错误 404：找不到页面",
+    "Page not found": "找不到网页",
     "The_requested_link_url_is_broken": "请求的链接 {{url}} 已损坏。",
     "Go back": "回去",
     "DictionaryLanguage": "Mandarin (simplified Chinese)"
