Internationalize Online Giving button.

--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -1,6 +1,7 @@
 {
     "Greater Phoenix Chinese Christian Church": "凰城華人基督教會",
     "GPCCC": "凰城華人基督教會",
+    "Online Giving": "網上捐贈",
     "Church news for": "教會每週新聞",
     "Our belief and purpose": "我們的信念和宗旨",
     "Employment opportunities": "就業機會",
