--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,7 @@
 {
     "Greater Phoenix Chinese Christian Church": "Greater Phoenix Chinese Christian Church",
     "GPCCC": "GPCCC",
+    "Online Giving": "Online Giving",
     "Church news for": "Church news for",
     "Our belief and purpose": "Our belief and purpose",
     "Employment opportunities": "Employment opportunities",
