Internationalize YouTube service card.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,6 +2,9 @@
     "Greater Phoenix Chinese Christian Church": "Greater Phoenix Chinese Christian Church",
     "GPCCC": "GPCCC",
     "Online Giving": "Online Giving",
+    "Seek to": "Seek to",
+    "Recent services": "Recent services",
+    "Older services": "Older services",
     "Church news for": "Church news for",
     "Our belief and purpose": "Our belief and purpose",
     "Employment opportunities": "Employment opportunities",
