--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -2,6 +2,9 @@
     "Greater Phoenix Chinese Christian Church": "凰城華人基督教會",
     "GPCCC": "凰城華人基督教會",
     "Online Giving": "網上捐贈",
+    "Seek to": "尋求",
+    "Recent services": "最近講道",
+    "Older services": "較舊講道",
     "Church news for": "教會每週新聞",
     "Our belief and purpose": "我們的信念和宗旨",
     "Employment opportunities": "就業機會",
