--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -2,6 +2,9 @@
     "Greater Phoenix Chinese Christian Church": "凰城华人基督教会",
     "GPCCC": "凰城华人基督教会",
     "Online Giving": "网上捐赠",
+    "Seek to": "寻求",
+    "Recent services": "最近讲道",
+    "Older services": "较旧讲道",
     "Church news for": "教会每周新闻",
     "Our belief and purpose": "我们的信念和宗旨",
     "Employment opportunities": "就业机会",
