Translate service viewer error messages.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,6 +8,9 @@
     "Church news for": "Church news for",
     "Our belief and purpose": "Our belief and purpose",
     "Employment opportunities": "Employment opportunities",
+    "Unable_to_seek_to": "Unable to seek to {{seekPoint}}",
+    "Unable_to_load": "Unable to load {{service}}",
+    "Not implemented": "Not implemented",
     "Page not found": "Page not found",
     "The_requested_link_url_is_broken": "The requested link {{url}} is broken.",
     "Go back": "Go back",
