--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -8,6 +8,9 @@
     "Church news for": "教會每週新聞",
     "Our belief and purpose": "我們的信念和宗旨",
     "Employment opportunities": "就業機會",
+    "Unable_to_seek_to": "無法尋求 {{seekPoint}}",
+    "Unable_to_load": "無法載入 {{service}}",
+    "Not implemented": "未實現",
     "Page not found": "找不到網頁",
     "The_requested_link_url_is_broken": "請求的連結 {{url}} 已損壞。",
     "Go back": "回去",
