--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -8,6 +8,9 @@
     "Church news for": "教会每周新闻",
     "Our belief and purpose": "我们的信念和宗旨",
     "Employment opportunities": "就业机会",
+    "Unable_to_seek_to": "无法寻求 {{seekPoint}}",
+    "Unable_to_load": "无法加载 {{service}}",
+    "Not implemented": "未实现",
     "Page not found": "找不到网页",
     "The_requested_link_url_is_broken": "请求的链接 {{url}} 已损坏。",
     "Go back": "回去",
