Simplify. Show TBD for empty message and pastor.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,6 +2,8 @@
     "Greater Phoenix Chinese Christian Church": "Greater Phoenix Chinese Christian Church",
     "GPCCC": "GPCCC",
     "Online Giving": "Online Giving",
+    "Message: TBD": "Message: TBD",
+    "Speaker: TBD": "Speaker: TBD",
     "Seek to": "Seek to",
     "Recent services": "Recent services",
     "Older services": "Older services",
