--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -2,6 +2,8 @@
     "Greater Phoenix Chinese Christian Church": "凰城華人基督教會",
     "GPCCC": "凰城華人基督教會",
     "Online Giving": "網上捐贈",
+    "Message: TBD": "訊息：待定",
+    "Speaker: TBD": "講者：待定",
     "Seek to": "尋求",
     "Recent services": "最近講道",
     "Older services": "較舊講道",
