--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -2,6 +2,8 @@
     "Greater Phoenix Chinese Christian Church": "凰城华人基督教会",
     "GPCCC": "凰城华人基督教会",
     "Online Giving": "网上捐赠",
+    "Message: TBD": "消息：待定",
+    "Speaker: TBD": "演讲者：待定",
     "Seek to": "寻求",
     "Recent services": "最近讲道",
     "Older services": "较旧讲道",
