Localize navigation dropdown menu.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -16,5 +16,8 @@
     "Page not found": "Page not found",
     "The_requested_link_url_is_broken": "The requested link {{url}} is broken.",
     "Go back": "Go back",
+    "Live stream": "Live stream",
+    "Church news": "Church news",
+    "About us": "About us",
     "DictionaryLanguage": "English"
 }
