--- a/locales/zf/common.json
+++ b/locales/zf/common.json
@@ -16,5 +16,8 @@
     "Page not found": "找不到網頁",
     "The_requested_link_url_is_broken": "請求的連結 {{url}} 已損壞。",
     "Go back": "回去",
+    "Live stream": "直播",
+    "Church news": "教會新聞",
+    "About us": "關於我們",
     "DictionaryLanguage": "Cantonese (traditional Chinese)"
 }
