--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -16,5 +16,8 @@
     "Page not found": "找不到网页",
     "The_requested_link_url_is_broken": "请求的链接 {{url}} 已损坏。",
     "Go back": "回去",
+    "Live stream": "直播",
+    "Church news": "教会新闻",
+    "About us": "关于我们",
     "DictionaryLanguage": "Mandarin (simplified Chinese)"
 }
